pleo-antaeus/deploy/ingress-resourse.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-antaeus
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /rest
        pathType: Prefix
        backend:
          service:
            name: pleo-antaeus-service
            port:
              number: 8000
